fix alignment

--- a/src/app/components/layout/side-menu/side-menu.component.css
+++ b/src/app/components/layout/side-menu/side-menu.component.css
@@ -36,3 +36,7 @@ svg#control-dispatch {
   stroke: #4a4a4a;
   stroke-width: 10rem;
 }
+
+.menu-text {
+  padding-right: 0.15rem;
+}
